# teleGRAMMO

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  003_add_keyword_alerts.py  004_add_message_search_vector.py  b770522e31d8_add_schedule_fields_to_user_channel.py
docker/: Dockerfile  Dockerfile.frontend  Dockerfile.worker  entrypoint.api.sh  entrypoint.worker.sh
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: api.ts
frontend/src/store/: auth.ts
src/telegram_scraper/: __init__.py  config.py  main.py
src/telegram_scraper/api/: deps.py
src/telegram_scraper/api/v1/: analytics.py  auth.py  channels.py  export.py  jobs.py  keywords.py  media.py  router.py  telegram.py
src/telegram_scraper/core/: __init__.py  exceptions.py  security.py
src/telegram_scraper/db/: __init__.py  session.py
src/telegram_scraper/models/: __init__.py  base.py  channel.py  keyword_alert.py  media.py  message.py  scraping_job.py  telegram_session.py  user.py  user_channel.py
src/telegram_scraper/schemas/: __init__.py  auth.py  channel.py  job.py  message.py  telegram_session.py  user.py
src/telegram_scraper/services/: channel_service.py  job_service.py  scheduler_service.py  telegram_service.py
src/telegram_scraper/workers/: worker.py
tests/: conftest.py  test_health.py
(+10 files in other folders)
